crossplane/aws/resources/route.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: public-route
  labels:
    environment: production
    app: webapp
    owner: webdevs1
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: webapp-routegw
    region: us-east-1
    routeTableIdRef:
      name: public-route-table
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: private-route
  labels:
    environment: production
    app: webapp
    owner: webdevs1
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: webapp-natgw
    region: us-east-1
    routeTableIdRef:
      name: private-route-table
